# spidermatch

./: .editorconfig  .flake8  .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  release.yml
.qt_for_python/lupdate/: add_rule.qt.ts  panel.qt.ts  rule.qt.ts  welcome.qt.ts
.qt_for_python/uic/: add_rule.py  panel.py  rule.py  welcome.py
spidermatch/: __init__.py  main.py  spidermatch.py  worker.py
spidermatch/assets/: spidermatch.icns
spidermatch/lib/: a.json  entities.py  helpers.py  search.py
spidermatch/windows/: panel.ui  rule.ui  ui_panel.py  welcome.ui
tests/: __init__.py  conftest.py  helpers.py  test_lib.py  test_mock.py  test_search.py
typings/qt_material/: __init__.pyi  hook-qt_material.pyi
typings/qt_material/resources/: __init__.pyi  generate.pyi
