[tool]
[tool.poetry]
name = "spidermatch"
version = "0.1.0"
homepage = "https://github.com/agucova/spidermatch"
description = "Top-level package for SpiderMatch."
authors = ["Agustín Covarrubias <agucova@uc.cl>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Win32 (MS Windows)',
    'Environment :: MacOS X',
    'Environment :: X11 Applications',
    'Environment :: Web Environment',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development',
    'Topic :: Communications :: Email',
    'Topic :: Office/Business',
]
packages = [
    { include = "spidermatch" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
qt-material = "^2.10"
PyQt6 = "^6.2.3"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6"
coverage = "^6.3"
flake8 = "^4.0"
isort = "^5.10"
pytest = "^7.1"
black = "^22.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

